-another gap fix

--- a/style.scss
+++ b/style.scss
@@ -95,6 +95,7 @@ footer {
     header {
       padding: 0;
       text-align: center;
+      height: 77px;
     }
     nav {
       top: 77px;
